@@ -1,5 +1,7 @@
 Changelog for DimensionDoor (v2.1.4-SNAPSHOT)
 
+2013-03-23 12:33:34 +0000    added delayed task to switch texturepacks (James Richardson)
+2013-03-23 12:31:32 +0000    set texturepack OnJoin (James Richardson)
 2012-12-30 04:55:00 +0000    add ability to set per world texture packs. Fixes #27. (James Richardson)
 2012-11-18 15:16:50 +0000    update localisation key and fix #26 (James Richardson)
 2012-11-18 15:04:32 +0000    persist keep_spawn_in_memory fixes #25 (James Richardson)
